--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
 
-<div class="user"></div>
+<div class="usermessage"></div>
+
+
 
     <script src="scripts/app.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
 </body>
 </html>
